# gpupeek

./: .gitignore  Cargo.toml  README.md  gpupeek.service
src/: amd.rs  config.rs  gpu_control.rs  gpu_data.rs  intel.rs  main.rs  mock_data.rs  nvidia.rs
static/: index.html
