[package]
name = "gpupeek"
version = "0.1.0"
edition = "2024"
description = "A sleek real-time GPU monitoring dashboard served over WebSocket"
license = "MIT"

[features]
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.9"
nvml-wrapper = { version = "0.10", optional = true }
open = "5.3.4"
